# interception-cffi

./: .gitignore  MANIFEST.in  README.md  build_interception.py  build_utils.py  interception_build.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  whatsnew.rst
.github/workflows/: build.yaml  ci.yaml  publish.yaml  test.yaml
enum_helper/: _interception.py  enums.py
interception/: .gitignore  __init__.py  interception.py  interception_build.py  utils.py
interception/samples/: x2y.py
samples/: axes.py  cadstop.py  caps2esc.py  hardwareid.py  identify.py  x2y.py
src/: interception_build.py  utils_build.py
src/interception/: .gitignore  __init__.py  _interception.pyi  _utils.pyi  utils.py
src/interception/samples/: axes.py
src/samples/: __main__.py  cadstop.py  mathpointer.py  x2y.py
tests/: test_interception.py  test_utils.py
